--- a/home/requirements.txt
+++ b/home/requirements.txt
@@ -1,5 +1,6 @@
-Flask
-flask-mysqldb
-requests
-Flask-CORS
-blueprint
+Flask==2.3.2
+flask-cors==3.0.10
+Flask-SQLAlchemy==3.0.5
+Flask-Bcrypt==1.0.1
+Flask-Login==0.6.2
+psycopg2-binary==2.9.6
